[package]
name = "toyraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tonic = "0.10.2"
tokio = "1.35.1"
hyper = "1.1.0"
tower = { version = "0.4", features = ["full"] }
warp = "0.3.6"
either = "1.9.0"
prost = "0.12.3"

[build-dependencies]
tonic-build = "0.10.2"
